[gd_scene load_steps=5 format=3 uid="uid://c64nl2fkq45ge"]

[ext_resource type="Texture2D" uid="uid://cvxmf74b0c0f6" path="res://Assets/UI/IButtonKey.png" id="1_x74bt"]
[ext_resource type="Script" uid="uid://d3h26gew4rpfs" path="res://Scenes/UI/Reusables/AbilityInfoButton.gd" id="2_wlvad"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x74bt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wlvad"]

[node name="AbilityInfoButton" type="Button"]
offset_right = 138.0
offset_bottom = 31.0
theme_override_constants/outline_size = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_x74bt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wlvad")
alignment = 0
script = ExtResource("2_wlvad")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_left = 143.0
offset_top = -9.0
offset_right = 193.0
offset_bottom = 41.0
texture = ExtResource("1_x74bt")
expand_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
